--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zomato</title>
-    <link rel="icon" href="../Images/Favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="icon" href="./Images/Favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <nav class="navbar">
@@ -14,7 +14,7 @@
             <a href="/" >Get the App</a>
         </div>
         <div class="navBox2">
-            <div id="zomatosmLogo"><img src="../Images/zomatosmalllogo.avif" alt="Zomato"></div>
+            <div id="zomatosmLogo"><img src="./Images/zomatosmalllogo.avif" alt="Zomato"></div>
             <ul class="listItems">
                 <li><a href="/">Investor Relations</a></li>
                 <li><a href="/">Add Restaurent</a></li>
@@ -26,7 +26,7 @@
     </nav>
     <header id="header">
         <div class="startLogo">
-            <img src="../Images/fslogo.avif" alt="Zomato">
+            <img src="./Images/fslogo.avif" alt="Zomato">
             <p class="">Discover the best food & drinks in Hyderabad</p>
         </div>
         <div class="search">
@@ -38,6 +38,6 @@
     </header>
     
     <script src="https://kit.fontawesome.com/4507369af8.js" crossorigin="anonymous"></script>
-    <script src="../JS/script.js"></script>
+    <script src="./JS/script.js"></script>
 </body>
 </html>
